--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "husky": "^9.1.7",
         "lint-staged": "^15.4.2",
         "nodemon": "^3.1.9",
+        "pino-pretty": "^13.0.0",
         "prettier": "^3.4.2",
         "rimraf": "^6.0.1",
         "ts-node": "^10.9.2",
